--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <p>Olá, meu nome é Maiara Muller e atualmente participo do Programa de Bolsas AWS Cloud Data Engineering, da empresa Compass UOL. </p>
         <P id="welcome-text">Seja bem-vindo!</P>
         <ul id="social-container">
-            <li><a href="#" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
-            <li><a href="#" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+            <li><a href="https://www.instagram.com/alessandra.may/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+            <li><a href="https://www.linkedin.com/in/maiara-m" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
             
         </ul>
         <div id="email-container">
